[package]
name = "SOEdownload_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.24.2", features = ["full"] }
log = "0.4.17"
zip = "0.6.3"
