[package]
name = "SOEupdater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.75"
attohttpc = "0.18.0"
serde = { version = "1.0.133", features = ["derive"] }
openfile = "2.1.0"
zip = "0.5.13"
SOEcommon = {path="../SOEcommon"}
